--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/MPacMan/API_SERVER_PUSHELLP#readme",
   "dependencies": {
     "@hapi/hapi": "^20.1.2",
+    "dotenv": "^8.2.0",
     "mongodb": "^3.6.6"
   }
 }
