--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/MPacMan/API_SERVER_PUSHELLP#readme",
   "dependencies": {
     "@hapi/hapi": "^20.1.2",
+    "@hapi/inert": "^6.0.3",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
